# tt-forge-fe

./: .clang-format  .flake8-config  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.perf.yml  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pytest_current_test_executing  .test_durations  .test_durations_new  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENCE  LICENSE  Makefile  README.md  attention_mask.pt  attention_mask_qwen.pt  attention_mask_t5block.pt  attention_scores.pt  b0_ip.pt  b10_ip.pt  b11_ip.pt  b1_ip.pt  b2_ip.pt  b3_ip.pt  b4_ip.pt  b5_ip.pt  b6_ip.pt  b7_ip.pt  b8_ip.pt  b9_ip.pt  build_wheels.py  cache_position.pt  cache_position_t5block.pt  calculated_k_jan27.pt  causal_mask.pt  clean_all.sh  (+53 more)
env/: CMakeLists.txt  README.md  activate  activate.fish  core_requirements.txt  create_venv.sh  dev_requirements.txt  dist_requirements.txt  install_ttmlir_requirements.sh  linux_requirements.txt  mac_requirements.txt  requirements_ext.txt
forge/csrc/: CMakeLists.txt  buda_passes.cpp  buda_passes.hpp  forge_bindings.cpp  forge_graph_module.hpp  forge_passes.cpp  forge_passes.hpp  python_bindings_common.hpp
forge/csrc/autograd/: CMakeLists.txt  autograd.cpp  autograd.hpp  binding.cpp  binding.hpp  python_bindings.cpp  python_bindings.hpp
forge/csrc/backend_api/: CMakeLists.txt  arch_type.cpp  arch_type.hpp  backend_api.cpp  device_config.hpp
forge/csrc/graph_lib/: CMakeLists.txt  defines.cpp  defines.hpp  edge.cpp  edge.hpp  graph.cpp  graph.hpp  node.cpp  node.hpp  node_types.cpp  node_types.hpp  python_bindings.cpp  python_bindings.hpp  query.hpp  shape.cpp  shape.hpp  utils.cpp  utils.hpp
forge/csrc/graph_lib/tests/: test_graphlib_utils.cpp
forge/csrc/lower_to_forge/: common.cpp  common.hpp
forge/csrc/ops/: CMakeLists.txt  common_utils.cpp  common_utils.hpp  op.cpp  op.hpp  op_abs.cpp  op_adaptive_max_pool_2d.cpp  op_add.cpp  op_adv_index.cpp  op_argmax.cpp  op_argsort.cpp  op_atan.cpp  op_avg_pool_1d.cpp  op_avg_pool_2d.cpp  op_avg_pool_3d.cpp  op_batchnorm.cpp  op_bitwise_and.cpp  op_broadcast.cpp  op_buffer.cpp  op_cast.cpp  op_clip.cpp  op_common.cpp  op_common.hpp  op_concatenate.cpp  op_constant.cpp  op_constant_pad.cpp  op_conv_2d.cpp  op_conv_2d_depthwise_weights.cpp  op_conv_2d_depthwise_weights_bw.cpp  op_conv_2d_grouped_weights.cpp  op_conv_2d_grouped_weights_bw.cpp  op_conv_2d_prestride_act.cpp  op_conv_2d_prestride_weights.cpp  op_conv_2d_transpose.cpp  op_conv_3d.cpp  op_conv_Sum.cpp  op_conv_sum.cpp  op_cosine.cpp  op_cumulative_sum.cpp  op_depthwise.cpp  (+94 more)
forge/csrc/passes/: amp.cpp  amp.hpp  commute_utils.cpp  commute_utils.hpp  constant_folding.cpp  consteval.cpp  consteval.hpp  dataformat.cpp  dataformat.hpp  decompose_nd_reshape_split.cpp  decompose_nd_reshape_split.hpp  decomposing_context.cpp  decomposing_context.hpp  erase_consecutive_reshape.cpp  erase_consecutive_reshape.hpp  erase_inverse_ops.cpp  erase_inverse_ops.hpp  erase_unnecessary_4d_tm_sequence.cpp  explicate_unsqueeze.cpp  explicate_unsqueeze.hpp  extract_unique_op_configuration.cpp  extract_unique_op_configuration.hpp  fracture.cpp  fuse_conv2d_bias.cpp  fuse_pad_conv2d.cpp  fuse_per_channel_ops.cpp  fuse_redundant_tm_sequence.cpp  fuse_redundant_tm_sequence.hpp  fuse_reshape_transpose_into_slice.cpp  generate_initial_flops_estimate.cpp  hoist_transforms_to_inputs.cpp  hoist_transforms_to_inputs.hpp  insert_inverse_on_io.cpp  insert_inverse_on_io.hpp  limit_to_4d_reshape.cpp  limit_to_4d_reshape.hpp  limit_to_5d_reshape.cpp  limit_to_5d_reshape.hpp  link_past_cache_ios.cpp  lower_concat_to_runtime_transform.cpp  (+43 more)
forge/csrc/passes/tests/: test_constant_folding.cpp  test_data_formats.cpp  test_erase_inverse_ops.cpp  test_fuse_pad_conv2d.cpp  test_fuse_reshape_transpose_pairs_into_slice_or_stack_tm.cpp  test_mm_fuse_bias.cpp  test_move_select_after_matmul_optional.cpp  test_past_cache_ublock_order.cpp  test_tilize.cpp  (+2 more)
forge/csrc/reportify/: CMakeLists.txt  paths.cpp  paths.hpp  reportify.cpp  reportify.hpp  to_json.cpp  to_json.hpp
forge/csrc/runtime/: CMakeLists.txt  python_bindings.cpp  python_bindings.hpp  runtime.cpp  runtime.hpp  state.cpp  state.hpp  tensor.hpp  tt_device.cpp  tt_device.hpp
forge/csrc/shared_utils/: CMakeLists.txt  forge_property_utils.cpp  forge_property_utils.hpp  json_extension.hpp  placement_printer.cpp  placement_printer.hpp  pretty_table.cpp  pretty_table.hpp  sparse_matmul_utils.cpp  sparse_matmul_utils.hpp  string_extension.cpp  string_extension.hpp
forge/csrc/test/: CMakeLists.txt  common.hpp  graph_api.hpp
forge/csrc/tt_torch_device/: CMakeLists.txt  python_bindings.cpp  python_bindings.hpp  torch_device_impl.cpp  tt_device.cpp  tt_device.hpp
forge/csrc/verif/: CMakeLists.txt  python_bindings.cpp  python_bindings.hpp  verif_ops.cpp  verif_ops.hpp
pybuda/csrc/: CMakeLists.txt  buda_passes.cpp  buda_passes.hpp  module.mk  pybuda_bindings.cpp
pybuda/csrc/autograd/: CMakeLists.txt  autograd.cpp  binding.cpp  module.mk
pybuda/csrc/backend_api/: CMakeLists.txt  arch_type.hpp  backend_api.cpp  device_config.hpp  module.mk
pybuda/csrc/graph_lib/: CMakeLists.txt  graph.cpp  graph.hpp  module.mk  node.cpp  node.hpp  node_types.hpp  python_bindings.cpp  python_bindings.hpp  shape.hpp  utils.cpp  utils.hpp
pybuda/csrc/passes/: amp.cpp  dataformat.cpp  dataformat.hpp  decomposing_context.cpp  decomposing_context.hpp  emit_mlir.cpp  emit_mlir.hpp  lower_to_mlir.cpp  lower_to_mlir.hpp  lowering_context.cpp  lowering_context.hpp  mlir_compiler.cpp  mlir_compiler.hpp  mlir_passes.cpp  mlir_passes.hpp  passes_utils.cpp  pre_placer_buda_passes.cpp  pre_placer_buda_passes.hpp
pybuda/csrc/reportify/: CMakeLists.txt  module.mk  paths.cpp  reportify.cpp  reportify.hpp  to_json.cpp  to_json.hpp
pybuda/csrc/runtime/: CMakeLists.txt  runtime.cpp  tt_device.cpp  tt_device.hpp
pybuda/csrc/shared_utils/: CMakeLists.txt  sparse_matmul_utils.cpp  sparse_matmul_utils.hpp
pybuda/csrc/test/: common.hpp
pybuda/csrc/tt_torch_device/: CMakeLists.txt  module.mk  python_bindings.cpp  torch_device_impl.cpp  tt_device.cpp  tt_device.hpp
(+7300 files in other folders)
