[build-system]
requires = ["setuptools>=61.0", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "tt_forge_fe"
description = "AI/ML framework for Tenstorrent devices"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Tenstorrent", email = "info@tenstorrent.com" }
]
requires-python = ">=3.11"
keywords = ["forge", "machine learning", "tenstorrent"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

# We will dynamically provide `version` and `dependencies` in setup.py
dynamic = ["version", "dependencies"]
